finished blog.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@1&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@1&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -93,10 +92,8 @@
         </section>
         <section class="galleryHome">
             <img src="./Boat-Ride-Adventures-final-assets/home-image-3@2x.jpg" alt="Boat far away under a blue sky">
-            <img src="./Boat-Ride-Adventures-final-assets/home-image-1@2x.jpg"
-                        alt="A front right side of a boat and the ocean beyond it">
-            <img src="./Boat-Ride-Adventures-final-assets/home-image-2@2x.jpg"
-                        alt="A view of the pulley for the sails on a boat">
+            <img src="./Boat-Ride-Adventures-final-assets/home-image-1@2x.jpg" alt="A front right side of a boat and the ocean beyond it">
+            <img src="./Boat-Ride-Adventures-final-assets/home-image-2@2x.jpg" alt="A view of the pulley for the sails on a boat">
         </section>
     </main>
     <footer>
