--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
             <label for="name"></label>
             <input type="text" placeholder="Name" id="name" name="name">
             <label for="email"></label>
-            <input type="email" placeholder="Email" id="email" name="email">
+            <input type="email" placeholder="Email address" id="email" name="email">
             <label for="comment"></label>
             <textarea name="comment" placeholder="Comment" id="comment" cols="30" rows="10"></textarea>
             <button type="submit">Post Comment</button>        
