--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,44 @@
     <title>Boat Ride Adventures Contact</title>
 </head>
 <body>
-    
+    <header>
+        <!-- Nav Section -->
+        <nav>
+            <ul class="mainMenu">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="#"">Contact</a></li>
+            </ul>
+        </nav>
+        <h1>Get In Touch</h1>
+    </header>
 </body>
+    <main>
+        <form action="">
+            <label for="name"></label>
+            <input type="text" placeholder="Name" id="name" name="name">
+            <label for="email"></label>
+            <input type="email" placeholder="Email address" id="email" name="email">
+            <label for="comment"></label>
+            <textarea name="comment" placeholder="Comment" id="comment" cols="30" rows="10"></textarea>
+            <button type="submit">Submit</button>
+        </form>
+        <section class="contact">
+            <div class="icons">
+                <i></i>
+                <i></i>
+                <i></i>
+                <i></i>
+            </div>
+            <p>info@email.com</p>
+            <p>123 - 456 - 7890
+            123 Queen Street West, Unit 10
+            Toronto, Ontario
+            M5V2D5</p>
+        </section>
+    </main>
+    <footer>
+        <p>Copyright &copy; 2019 HackerYou</p> 
+    </footer>
 </html>
