added some more styling to the partials

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Skip Link -->
     <a href="#mainContent" class="skipLink">Skip to Main content</a>
 
-    <header>
+    <header class="headerHome">
         <!-- Nav Section -->
         <nav>
             <ul class="mainMenu">
@@ -25,10 +25,9 @@
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
-            <h1>Boat Ride Adventures</h1>
-            <img src="./Boat-Ride-Adventures-final-assets/home-box-header.png"
-                alt="Medium size cruise ship floating on the waves">
         </nav>
+        <h1>Boat Ride Adventures</h1>
+        <img src="./Boat-Ride-Adventures-final-assets/home-box-header.png" alt="Medium size cruise ship floating on the waves">
     </header>
 
     <main>
