--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boat Ride Adventures Blog</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@1&family=Roboto:wght@400;700&display=swap"rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="headerBlog">
         <!-- Nav Section -->
         <nav>
             <ul class="mainMenu">
