fixed up partials, fixed up HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@1&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e4e56c8b42.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -27,32 +28,38 @@
             </ul>
         </nav>
         <h1>Boat Ride Adventures</h1>
-        <img src="./Boat-Ride-Adventures-final-assets/home-box-header.png" alt="Medium size cruise ship floating on the waves">
+        <div class="headerImgContainer">
+            <img src="./Boat-Ride-Adventures-final-assets/home-box-header.png" alt="Medium size cruise ship floating on the waves">
+        </div>
     </header>
 
     <main>
-        <section class="about wrapper">
-            <div class="destinations">
-                <i></i>
-                <h2>New Destinations</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit sequi, animi vel enim
-                    voluptatum maiores quaerat? Ducimus, sapiente ad nobis dicta perferendis expedita animi sint omnis
-                    ullam harum doloribus.</p>
-            </div>
-            <div class="community">
-                <i></i>
-                <h2>Community</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
-            </div>
-            <div class="blog">
-                <i></i>
-                <h2>Blog</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
-            </div>
-            <div class="contact">
-                <i></i>
-                <h2>Get in touch</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
+        <section class="blogPosts">
+            <div class="wrapper">
+                <ul class="blogGallery">
+                    <li class="blogOne">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <h2>New Destinations</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit sequi, animi vel enim voluptatum maiores
+                        quaerat? Ducimus, sapiente ad nobis dicta perferendis expedita animi sint omnis
+                        ullam harum doloribus.</p>
+                    </li>
+                    <li class="blogTwo">
+                        <i class="fa-solid fa-users"></i>
+                        <h2>Community</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
+                    </li>
+                    <li class="blogThree">
+                        <i class="fa-solid fa-file"></i>
+                        <h2>Blog</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
+                    </li>
+                    <li class="blogFour">
+                        <i class="fa-solid fa-phone-flip"></i>
+                        <h2>Get in touch</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="info">
