organizing html and adding some more styling

--- a/blog.html
+++ b/blog.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@1&family=Roboto:wght@400;700&display=swap"rel="stylesheet">
 </head>
 <body>
+   
+<!-- Header/Nav Section -->
     <header class="headerBlog">
-        <!-- Nav Section -->
         <nav>
             <ul class="mainMenu">
                 <li><a href="./index.html">Home</a></li>
@@ -23,7 +24,11 @@
         </nav>
         <h1>Blog</h1>
     </header>
+
+<!-- Main Section -->
     <main>
+
+<!-- Blog Post -->
         <section class="aboutBlog">
             <article>
                 <img src="./Boat-Ride-Adventures-final-assets/blog-post-image.jpg" alt="Sailboat tied up, floating in the water">
@@ -34,7 +39,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, sit! Placeat, sequi? Labore, dignissimos perspiciatis, autem dolore voluptates nulla commodi, natus maiores ab animi reprehenderit asperiores eius doloremque cum minus.</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam eius ab minus autem tempora repudiandae doloribus amet voluptate nisi consequatur quaerat omnis dolor nulla sit perferendis numquam, eos rerum beatae?</p>
             </article>
-            <div>
+
+<!-- Mission Section -->
+            <div class="mission">
                 <img src="./Boat-Ride-Adventures-final-assets/blog-side-image.jpg" alt="The front of a large sailboat at sunset">
                 <h3>Our Mission</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae sint alias corporis ullam quidem, magni, quod molestias iusto exercitationem voluptatum maxime blanditiis velit consectetur maiores, debitis iste deleniti accusamus.</p>
@@ -47,8 +54,10 @@
                 </ul>
             </div>
         </section>
+
+<!-- Comments Section -->
         <section class="comments">
-            <h4>Comments:</h4>
+            <h5>Comments:</h5>
             <div>
                 <img src="./Boat-Ride-Adventures-final-assets/comment-1.jpg" alt="Photo of a man smiling">
                 <p class="commentsDate">Tuesday October 9th, 2019 by Ali</p>
@@ -60,6 +69,8 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate saepe similique, amet distinctio dolorum expedita blanditiis laudantium earum molestiae tempora aut recusandae quis ullam fuga nam ipsam voluptates, placeat vel.</p>
             </div>
         </section>
+
+<!-- Form Section -->
         <form action="">
             <label for="name"></label>
             <input type="text" placeholder="Name" id="name" name="name">
@@ -70,6 +81,7 @@
             <button type="submit">Post Comment</button>        
         </form>
 </main>
+
     <footer>
         <p>Copyright &copy; 2019 HackerYou</p>
     </footer>
