--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <!-- Skip Link -->
+<!-- Skip Link -->
     <a href="#mainContent" class="skipLink">Skip to Main content</a>
 
+<!-- Header/Nav Section -->
     <header class="headerHome">
-        <!-- Nav Section -->
         <nav>
             <ul class="mainMenu">
                 <li><a href="#">Home</a></li>
@@ -28,12 +28,15 @@
             </ul>
         </nav>
         <h1>Boat Ride Adventures</h1>
+    </header>
+
+<!-- Main Section -->
+    <main>
         <div class="headerImgContainer">
             <img src="./Boat-Ride-Adventures-final-assets/home-box-header.png" alt="Medium size cruise ship floating on the waves">
         </div>
-    </header>
 
-    <main>
+<!-- Blogs -->
         <section class="blogPosts">
             <div class="wrapper">
                 <ul class="blogGallery">
@@ -62,6 +65,8 @@
                 </ul>
             </div>
         </section>
+
+<!-- Programs/Locations -->
         <section class="info">
             <div class="programs">
             <img src="./Boat-Ride-Adventures-final-assets/left-image.jpg"
@@ -78,8 +83,10 @@
             <img src="./Boat-Ride-Adventures-final-assets/right-image.jpg" alt="Rope tied up at the end of a boat over turqoise waters">
             </div>
         </section>
+
+<!-- Vacation/Contest -->
         <section class="vacation">
-            <div>
+            <div class="textContainer">
                 <h4>Extra vacation days?</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus repellendus eaque aliquid
                 odio est illum, quidem laborum. Qui beatae modi ratione a consequatur quaerat deleniti hic aperiam
@@ -88,20 +95,31 @@
             </div>
             <img src="./Boat-Ride-Adventures-final-assets/banner.jpg" alt="People in canoes on a lake with mountains in the background" class="banner">
         </section>
-        <section class="contest wrapper">
-            <img src="./Boat-Ride-Adventures-final-assets/small-box.jpg" alt="Woman staring out at a glacier">
-                <h4>Win a trip of a lifetime</h4>
+        <section class="contest">
+            <div class="imgContainer">
+                <img src="./Boat-Ride-Adventures-final-assets/small-box.jpg" alt="Woman staring out at a glacier">
+            </div>
+            <div class="textContainer">
+                <h4>Win trip of a lifetime</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eos obcaecati quam quae iusto illum facere
                 omnis ratione, laudantium porro vel esse qui ut expedita necessitatibus, explicabo quis exercitationem
-                consectetur.</p>
+                consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, voluptates. Distinctio dolor fugiat vel esse. Harum asperiores fuga quisquam, repellendus debitis quaerat nihil dolorum earum quas, fugit, magni laboriosam omnis.</p>
                 <button>Find Out More</button>
+            </div>
         </section>
-        <section class="galleryHome">
-            <img src="./Boat-Ride-Adventures-final-assets/home-image-3@2x.jpg" alt="Boat far away under a blue sky">
-            <img src="./Boat-Ride-Adventures-final-assets/home-image-1@2x.jpg" alt="A front right side of a boat and the ocean beyond it">
-            <img src="./Boat-Ride-Adventures-final-assets/home-image-2@2x.jpg" alt="A view of the pulley for the sails on a boat">
+
+<!-- Home Gallery -->
+        <section>
+            <ul class="galleryHome">
+                <li><img src="./Boat-Ride-Adventures-final-assets/home-image-3@2x.jpg" alt="Boat far away under a blue sky"></li>
+                <li> <img src="./Boat-Ride-Adventures-final-assets/home-image-1@2x.jpg" alt="A front right side of a boat and the ocean beyond it"></li>
+                <li><img src="./Boat-Ride-Adventures-final-assets/home-image-2@2x.jpg" alt="A view of the pulley for the sails on a boat">
+                </li>
+            </ul>
         </section>
     </main>
+
+<!-- Footer -->
     <footer>
         <p>Copyright &copy; 2019 HackerYou</p>
     </footer>          
