--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@1&family=Roboto:wght@400;700&display=swap"rel="stylesheet">
 </head>
 <body>
+
+<!-- Header/Nav Section --> 
     <header>
-        <!-- Nav Section -->
         <nav>
             <ul class="mainMenu">
                 <li><a href="./index.html">Home</a></li>
@@ -24,8 +25,12 @@
         <h1>Get In Touch</h1>
     </header>
 </body>
+
+<!-- Main Section -->
     <main>
-        <form action="">
+
+<!-- Contact Form Section -->
+        <form class="formContact" action="">
             <label for="name"></label>
             <input type="text" placeholder="Name" id="name" name="name">
             <label for="email"></label>
@@ -34,6 +39,8 @@
             <textarea name="comment" placeholder="Comment" id="comment" cols="30" rows="10"></textarea>
             <button type="submit">Submit</button>
         </form>
+
+<!-- Contact Section -->
         <section class="contact">
             <div class="icons">
                 <i></i>
@@ -48,6 +55,7 @@
             M5V2D5</p>
         </section>
     </main>
+    
     <footer>
         <p>Copyright &copy; 2019 HackerYou</p> 
     </footer>
