working on positioning and styling

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 <!-- Contact Section -->
         <section class="wrapper">
             <div class="contact">
-            <div class="icons">
+            <div class="iconsContact">
                 <i class="fa-brands fa-facebook-f"></i>
                 <i class="fa-brands fa-instagram"></i>
                 <i class="fa-brands fa-twitter"></i>                
@@ -48,12 +48,12 @@
 <!-- Contact Form Section -->
             <div class="contactForm">
                 <form class="formContact" action="">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" class="name" required="true">
-                    <label for="email">Email address</label>
-                    <input type="email" id="email" name="email" class="email" required="true">
+                    <label for="name"></label>
+                    <input type="text" placeholder="Name" id="name" name="name" class="name" required="true">
+                    <label for="email"></label>
+                    <input type="email" placeholder="Email address" id="email" name="email" class="email" required="true">
                     <label for="message"></label>
-                    <textarea name="message" id="message" placeholder="Message" class="message" cols="60" rows="10" required="true"></textarea>
+                    <textarea name="message" placeholder="Message" id="message" class="message" cols="60" rows="10" required="true"></textarea>
                     <button type="submit">Submit</button>
                 </form>
             </div>
