--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Boat Ride Adventures</h1>
+        <h1>Boat Ride 
+        <br>Adventures</h1>
     </header>
 
 <!-- Main Section -->
-    <main>
+    <main class="homeMain">
         <div class="headerImgContainer">
             <img src="./Boat-Ride-Adventures-final-assets/home-box-header.png" alt="Medium size cruise ship floating on the waves">
         </div>
@@ -44,8 +45,7 @@
                         <i class="fa-solid fa-location-dot"></i>
                         <h2>New Destinations</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit sequi, animi vel enim voluptatum maiores
-                        quaerat? Ducimus, sapiente ad nobis dicta perferendis expedita animi sint omnis
-                        ullam harum doloribus.</p>
+                        quaerat?</p>
                     </li>
                     <li class="blogTwo">
                         <i class="fa-solid fa-users"></i>
@@ -67,20 +67,25 @@
         </section>
 
 <!-- Programs/Locations -->
-        <section class="info">
-            <div class="programs">
-            <img src="./Boat-Ride-Adventures-final-assets/left-image.jpg"
-                            alt="Boat floating in the water under a cloudy sky">
+        <section class="programs">
+            <div class="programsImgContainer">
+            <img src="./Boat-Ride-Adventures-final-assets/left-image.jpg" alt="Boat floating in the water under a cloudy sky">
+            </div>
+            <div class="programsTextContainer">
                 <h3>Our Programs</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique debitis doloremque laboriosam accusamus velit dicta nulla, impedit labore recusandae sapiente nostrum perferendis illum, ad odit temporibus expedita accusantium architecto cupiditate?</p>
                 <button>Read More</button>
             </div>
-            <div class="locations">
+        </section>
+        <section class="locations">
+            <div class="locationsTextContainer">
                 <h3>New Locations</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae, minima illo ad doloremque ex,
                 delectus vero totam debitis aliquid mollitia nemo itaque, id cum rerum quisquam dignissimos. Id, molestias.</p>
                 <button>Read More</button>
-            <img src="./Boat-Ride-Adventures-final-assets/right-image.jpg" alt="Rope tied up at the end of a boat over turqoise waters">
+            </div>
+            <div class="locationsImgContainer"> 
+            <img class="locationsImg" src="./Boat-Ride-Adventures-final-assets/right-image.jpg" alt="Rope tied up at the end of a boat over turqoise waters">
             </div>
         </section>
 
