--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h4>Extra vacation days?</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus repellendus eaque aliquid
                 odio est illum, quidem laborum. Qui beatae modi ratione a consequatur quaerat deleniti hic aperiam
-                aspernatur nisi?</p>
+                aspernatur nisi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus repellendus eaque aliquid odio est illum, quidem laborum. Qui beatae modi ratione a consequatur quaerat deleniti hic aperiam aspernatur nisi?</p>
                 <button>Find Out More</button>
             </div>
             <img src="./Boat-Ride-Adventures-final-assets/banner.jpg" alt="People in canoes on a lake with mountains in the background" class="banner">
