--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <button>Read More</button>
             </div>
             <div class="locationsImgContainer"> 
-            <img class="locationsImg" src="./Boat-Ride-Adventures-final-assets/right-image.jpg" alt="Rope tied up at the end of a boat over turqoise waters">
+                <img src="./Boat-Ride-Adventures-final-assets/right-image.jpg" alt="Rope tied up at the end of a boat over turqoise waters">
             </div>
         </section>
 
