adding stuffgit status

--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
         <h1>Blog</h1>
+        <i class="fa-solid fa-bars"></i>
     </header>
 
 <!-- Main Section -->
