--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </nav>
         <h1>Boat Ride 
         <br>Adventures</h1>
+        <i class="fa-solid fa-bars"></i>
     </header>
 
 <!-- Main Section -->
