--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
             </ul>
         </nav>
         <h1>Get In Touch</h1>
+        <i class="fa-solid fa-bars"></i>
     </header>
 
 <!-- Main Section -->
