finished contact us styling

--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
                     <img src="./Boat-Ride-Adventures-final-assets/blog-side-image.jpg" alt="The front of a large sailboat at sunset">
                 <div class="missionTextContainer">
                     <h3>Our Mission</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae sint alias. Find out more.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae sint alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae sint alias. Find out more.</p>
                     <h3>Recent Posts</h3>
                     <ul>
                         <li>Donec facilisis torot ut</li>
@@ -80,10 +80,12 @@
 
 <!-- Form Section -->
         <form action="" class="blogForm">
+            <div class="nameEmail">
             <label for="name"></label>
             <input type="text" placeholder="Name" class="name" id="name" name="name">
             <label for="email"></label>
             <input type="email" placeholder="Email address" class="email" id="email" name="email">
+            </div>
             <label for="comment"></label>
             <textarea name="comment" placeholder="Comment" id="comment" cols="30" rows="10"></textarea>
             <button class="blogButton" type="submit">Post Comment</button>        
